--- a/codigos base/codigos.html
+++ b/codigos base/codigos.html
@@ -2,143 +2,174 @@
 <html lang="en">
 
 <head>
+    <title>Calculadora de Juros</title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Concert+One|Montserrat" rel="stylesheet">
     <script src="codigos.js"></script>
 </head>
 
 <body id="teste" style="background-color:#C1F7FF;">
-    <fieldset style="background-color: green;">
-        <legend>Calculo valor futuro sem reforço</legend>
-        <label>Valor Inicial:</label>
-        <input name="valor" id="val" type="text" onkeyup="verificarnum()" /> &nbsp
-        <lable>Tipo juro:</lable>
-        <select name="juro" id="juro">
-            <option value="simples"> Juro Simples </option>
-            <option value="composto"> Juro Composto </option>
-        </select> &nbsp
-        <label>Juro:</label>
-        <input name="valjuro" id="valjuro" type="text" /> &nbsp
-        <label>Prazo:</label>
-        <input name="anos" id="year" type="text" /> &nbsp
-        <input type="button" value="Calcular" onclick="calcular()" />
-        <label id="resultado"> valor Futuro: </label>
+    <div class='sample' id='sample'>
+        <fieldset style="background-color: green;">
+            <legend>Calculo valor futuro sem reforço</legend>
+            <label>Valor Inicial:</label>
+            <input name="valor" id="val" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <lable>Tipo juro:</lable>
+            <select name="juro" id="juro" onchange="calcular()">
+                <option value="simples"> Juro Simples </option>
+                <option value="composto"> Juro Composto </option>
+            </select> &nbsp
+            <label>Juro:</label>
+            <input name="valjuro" id="valjuro" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label>Prazo:</label>
+            <input name="anos" id="year" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <label> valor Futuro: </label>
+            <label id="resultado"></label>
+            <br>
+        </fieldset>
         <br>
-    </fieldset>
-    <br>
-    <fieldset style="background-color:green;"> 
-        <legend>calculo valor inicial sem reforço</legend>
-        <label>Valor Futuro:</label>
-        <input name="valinvest" id="valinvest" type="text"/> &nbsp
-        <lable>Tipo juro:</lable>
-        <select name="juro" id="juro_1">
-            <option value="simples"> Juro Simples </option>
-            <option value="composto"> Juro Composto </option>
-        </select> &nbsp
-        <label>Juro:</label>
-        <input name="valjuro" id="valjuro_1" type="text" /> &nbsp
-        <label>Prazo:</label>
-        <input name="anos" id="year_1" type="text" /> &nbsp
-        <input type="button" value="Calcular" onclick="calcularinvest()" />
-        <label id="resultado_1"> valor inicialsem reforço: </label>
+        <fieldset style="background-color:green;">
+            <legend>calculo valor inicial sem reforço</legend>
+            <label>Valor Futuro:</label>
+            <input name="valinvest" id="valinvest" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <lable>Tipo juro:</lable>
+            <select name="juro" id="juro_1" onchange="calcularinvest()">
+                <option value="simples"> Juro Simples </option>
+                <option value="composto"> Juro Composto </option>
+            </select> &nbsp
+            <label>Juro:</label>
+            <input name="valjuro" id="valjuro_1" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <label>Prazo:</label>
+            <input name="anos" id="year_1" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label> valor inicial sem reforço: </label>
+            <label id="resultado_1"></label>
+            <br>
+        </fieldset>
         <br>
-    </fieldset>
-    <br>
-    <fieldset style="background-color: green;">
-        <legend>Calculo valor futuro com reforço mensal </legend>
-        <label>Valor inicial:</label>
-        <input name="valor1" id="val1" type="text" onkeyup="verificarnum()" /> &nbsp
-        <label>Contributo Mensal</label>
-        <input name="contributo" id="contr" type="text" onkeyup="varificarnum2()" />
-        <lable>Tipo juro:</lable>
-        <select name="juro" id="juro1">
-            <option value="simples"> Juro Simples </option>
-            <option value="composto"> Juro Composto </option>
-        </select> &nbsp
-        <label>Juro:</label>
-        <input name="valjuro" id="valjuro1" type="text" /> &nbsp
-        <label>Prazo:</label>
-        <input name="anos" id="year1" type="text" /> &nbsp
-        <input type="button" value="Calcular" onclick="calcular2()" />
-        <label id="resultado1"> valor futuro com reforço: </label>
-
-    </fieldset>
-    <br>
-    <fieldset>
-        <legend>Calculo valor inicial com reforço</legend>
-        <label>Valor Futuro:</label>
-        <input name="valor1" id="val2" type="text" onkeyup="verificarnum()" /> &nbsp
-        <label>Contributo Mensal</label>
-        <input name="contributo" id="contr1" type="text" onkeyup="varificarnum2()" />
-        <lable>Tipo juro:</lable>
-        <select name="juro" id="juro2">
-            <option value="simples"> Juro Simples </option>
-            <option value="composto"> Juro Composto </option>
-        </select> &nbsp
-        <label>Juro:</label>
-        <input name="valjuro" id="valjuro2" type="text" /> &nbsp
-        <label>Prazo:</label>
-        <input name="anos" id="year2" type="text" /> &nbsp
-        <input type="button" value="Calcular" onclick="calcular3()" />
-        <label id="resultado2"> valor inicial com reforço: </label>
-    </fieldset>
-    <br>
-    <fieldset>
-        <legend>Calculo valor do reforço mensal</legend>
-        <label>Valor incial:</label>
-        <input name="valor1" id="val2" type="text" onkeyup="verificarnum()" /> &nbsp
-        <label>Valor Futuro</label>
-        <input name="contributo" id="contr1" type="text" onkeyup="varificarnum2()" />
-        <lable>Tipo juro:</lable>
-        <select name="juro" id="juro2">
-            <option value="simples"> Juro Simples </option>
-            <option value="composto"> Juro Composto </option>
-        </select> &nbsp
-        <label>Juro:</label>
-        <input name="valjuro" id="valjuro2" type="text" /> &nbsp
-        <label>Prazo:</label>
-        <input name="anos" id="year2" type="text" /> &nbsp
-        <input type="button" value="Calcular" onclick="calcular3()" />
-        <label id="resultado2"> valor do reforço : </label>
-    </fieldset>
-    <br>
-    <fieldset>
-        <legend>Calculo valor do reforço mensal</legend>
-        <label>Valor incial:</label>
-        <input name="valor1" id="val2" type="text" onkeyup="verificarnum()" /> &nbsp
-        <label>Valor Futuro</label>
-        <input name="contributo" id="contr1" type="text" onkeyup="varificarnum2()" />
-        <lable>Tipo juro:</lable>
-        <select name="juro" id="juro2">
-            <option value="simples"> Juro Simples </option>
-            <option value="composto"> Juro Composto </option>
-        </select> &nbsp
-        <label>Juro:</label>
-        <input name="valjuro" id="valjuro2" type="text" /> &nbsp
-        <label>Prazo:</label>
-        <input name="anos" id="year2" type="text" /> &nbsp
-        <input type="button" value="Calcular" onclick="calcular3()" />
-        <label id="resultado2"> valor do reforço : </label>
-    </fieldset>
-    <br>
-    <fieldset>
-        <legend>Calculo valor do reforço mensal</legend>
-        <label>Valor incial:</label>
-        <input name="valor1" id="val2" type="text" onkeyup="verificarnum()" /> &nbsp
-        <label>Valor Futuro</label>
-        <input name="contributo" id="contr1" type="text" onkeyup="varificarnum2()" />
-        <lable>Tipo juro:</lable>
-        <select name="juro" id="juro2">
-            <option value="simples"> Juro Simples </option>
-            <option value="composto"> Juro Composto </option>
-        </select> &nbsp
-        <label>Juro:</label>
-        <input name="valjuro" id="valjuro2" type="text" /> &nbsp
-        <label>Prazo:</label>
-        <input name="anos" id="year2" type="text" /> &nbsp
-        <input type="button" value="Calcular" onclick="calcular3()" />
-        <label id="resultado2"> valor do reforço : </label>
-    </fieldset>
+        <fieldset style="background-color: green;">
+            <legend>Calculo valor futuro com reforço mensal </legend>
+            <label>Valor inicial:</label>
+            <input name="valor1" id="val1" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <lable>Tipo de Reforço:</lable>
+            <select name="tipo_contributo" id="tipcontr" onchange="calcular2()"> 
+                <option value="semanal"> Contributo semanal </option>
+                <option value="mensal"> contributo mensal </option>
+                <option value="trimestral"> Contributo trimestral </option>
+                <option value="semestral"> Contributo semestral </option>
+                <option value="anual"> Contributo anual </option>
+            </select> &nbsp
+            <label>Contributo Mensal</label>
+            <input name="contributo" id="contr" type="text" onkeyup="verificarnum(id)" />
+            <lable>Tipo juro:</lable>
+            <select name="juro" id="juro1" onchange="calcular2()">
+                <option value="simples"> Juro Simples </option>
+                <option value="composto"> Juro Composto </option>
+            </select> &nbsp
+            <label>Juro:</label>
+            <input name="valjuro" id="valjuro1" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label>Prazo:</label>
+            <input name="anos" id="year1" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label> valor futuro com reforço: </label>
+            <label id="resultado1"></label> 
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Calculo valor inicial com reforço</legend>
+            <label>Valor Futuro:</label>
+            <input name="valor1" id="val2" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <label>Contributo Mensal</label>
+            <input name="contributo" id="contr1" type="text" onkeyup="verificarnum(id)" />
+            <lable>Tipo juro:</lable>
+            <select name="juro" id="juro2">
+                <option value="simples"> Juro Simples </option>
+                <option value="composto"> Juro Composto </option>
+            </select> &nbsp
+            <label>Juro:</label>
+            <input name="valjuro" id="valjuro2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label>Prazo:</label>
+            <input name="anos" id="year2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label> valor inicial com reforço: </label>
+            <label id="resultado2"></label>
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Calculo valor do reforço mensal</legend>
+            <label>Valor incial:</label>
+            <input name="valor1" id="val2" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <label>Valor Futuro</label>
+            <select name="tipo_contributo" id="tipcontr">
+                <option value="semanal"> Contributo semanal </option>
+                <option value="mensal"> contributo mensal </option>
+                <option value="trimestral"> Contributo trimestral </option>
+                <option value="semestral"> Contributo semestral </option>
+                <option value="anual"> Contributo anual </option>
+            </select> &nbsp
+            <input name="contributo" id="contr1" type="text" onkeyup="verificarnum(id)" />
+            <lable>Tipo juro:</lable>
+            <select name="juro" id="juro2">
+                <option value="simples"> Juro Simples </option>
+                <option value="composto"> Juro Composto </option>
+            </select> &nbsp
+            <label>Juro:</label>
+            <input name="valjuro" id="valjuro2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label>Prazo:</label>
+            <input name="anos" id="year2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label> valor do reforço : </label>
+            <label id="resultado2"></label>
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Calculo anos de investimento </legend>
+            <label>Valor incial:</label>
+            <input name="valor1" id="val2" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <label>Valor Futuro</label>
+            <input name="contributo" id="contr1" type="text" onkeyup="verificarnum(id)" />
+            <lable>Tipo juro:</lable>
+            <select name="juro" id="juro2">
+                <option value="simples"> Juro Simples </option>
+                <option value="composto"> Juro Composto </option>
+            </select> &nbsp
+            <label>Juro:</label>
+            <input name="valjuro" id="valjuro2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label>Prazo:</label>
+            <input name="anos" id="year2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label> valor do reforço : </label>
+            <label id="resultado2"></label>
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Calculo valor do reforço mensal</legend>
+            <label>Valor incial:</label>
+            <input name="valor1" id="val2" type="text" onkeyup="verificarnum(id)" /> &nbsp
+            <label>Valor Futuro</label>
+            <input name="contributo" id="contr1" type="text" onkeyup="verificarnum(id)" />
+            <lable>Tipo juro:</lable>
+            <select name="juro" id="juro2">
+                <option value="simples"> Juro Simples </option>
+                <option value="composto"> Juro Composto </option>
+            </select> &nbsp
+            <label>Juro:</label>
+            <input name="valjuro" id="valjuro2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label>Prazo:</label>
+            <input name="anos" id="year2" type="text" onkeyup="verificarnum(id)"/> &nbsp
+            <label> valor do reforço :</label>
+            <label id="resultado2"> </label>
+        </fieldset> 
+        <table id="myTable">
+            <tr>
+                <th>Anos</th>
+                <th id="Invest_col_head">Investimento</th>
+                <th id="tpjuro_col_head">Tipo de juro</th>
+                <th id="tajuro_col_head">Taxa de juro</th>
+                <th id="pcontr_col_head">Periodo de contributo</th>
+                <th id="contr_col_head">Contributo</th>
+                <th id="vjuro_col_head">Valor de juro</th>
+                <th id="vfinal_col_head">Valor final</th>
+            </tr>
+        </table>
+    </div>
+    
+    <input type="button" value="Guardar / Imprimir" onclick="javascript:printDiv('sample')" />
 </body>
 
 </html>
