--- a/html novo/valorfuturocomreforco.html
+++ b/html novo/valorfuturocomreforco.html
@@ -84,6 +84,19 @@
     <hr>
     <br>
     <div class="container" div="compound-interest ">
+
+      <table class="table table-striped table-bordered" id="myTable">
+        <tr>
+            <th>Anos</th>
+            <th id="Invest_col_head">Investimento</th>
+            <th id="tpjuro_col_head">Tipo de juro</th>
+            <th id="tajuro_col_head">Taxa de juro</th>
+            <th id="pcontr_col_head">Periodo de contributo</th>
+            <th id="contr_col_head">Contributo</th>
+            <th id="vjuro_col_head">Valor de juro</th>
+            <th id="vfinal_col_head">Valor final</th>
+        </tr>
+    </table>
       
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="codigos.js"></script>
