--- a/projeto final/valorfuturocomreforco.html
+++ b/projeto final/valorfuturocomreforco.html
@@ -1,4 +1,4 @@
-<head>
+p<head>
   <title>Interest Calculator</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -9,7 +9,7 @@
   <h1 class="text-center display-4">Interest Calculator</h1>
   <hr>
   <div class="dropdown">
-    <button style="margin-left:850px" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+    <button style="text-align: center ; margin:auto; display:flex;   ;" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
       data-bs-toggle="dropdown" aria-expanded="false">
       Selecionar calculo
     </button>
@@ -18,13 +18,13 @@
       <li><a class="dropdown-item" href="./valorinicialsemreforco.html">Calculo valor inicial sem reforço</a></li>
       <li><a class="dropdown-item" href="./valorincialcomreforco.html">Calculo valor inicial com reforço</a></li>
       <li><a class="dropdown-item" href="./valorreforcomensal.html">Calculo valor do reforço mensal</a></li>
-      <li><a class="dropdown-item" href="#">Calculo anos de investimento</a></li>
-      <li><a class="dropdown-item" href="#">Calculo valor do reforço mensal</a></li>
+     <!-- <li><a class="dropdown-item" href="#">Calculo anos de investimento</a></li>
+      <li><a class="dropdown-item" href="#">Calculo valor do reforço mensal</a></li>-->
     </ul>
   </div>
   <br>
   <div class="container" id="simple-interest">
-    <h3>Valor futuro com reforço mensal</h3>
+    <h3 style="text-align: center">Valor futuro com reforço mensal</h3>
     <form id="siForm">
       <div class="form-group">
         <label for="principalSimple">Valor Inicial: </label>
@@ -68,7 +68,8 @@
         <option value="trimestral"> Contributo trimestral </option>
         <option value="semestral"> Contributo semestral </option>
         <option value="anual"> Contributo anual </option>
-      </select>
+      </select></br>
+    
       <div class="form-group">
         <label for="interestSimple">Valor Futuro Com Reforço: </label>
         <input type="text" class="form-control" id="resultado1" readonly>
@@ -82,7 +83,8 @@
     <p class="lead mb-3" id="siOutput-02"></p>
   </div>
   <div class="text-center">
-    <input class="btn btn-secondary btn-lg" type="button" value="Reset"
+    <input type="button" value="Guardar / Imprimir" onclick="imprimir()" class="btn btn-secondary" >
+    <input class="btn btn-secondary" type="button" value="Reset"
       onClick="document.getElementById('siForm').reset()">
   </div>
 </div>
