tabela mais pequena espaco para grafico

--- a/projeto final/valorinicialsemreforco.html
+++ b/projeto final/valorinicialsemreforco.html
@@ -74,7 +74,7 @@
 <hr>
 <br>
 <div class="container" div="compound-interest ">
-  <table class="table table-striped table-bordered" id="myTable">
+  <table style="position: absolute; left: 50px;" class="table table-striped table-bordered w-auto" id="myTable">
     <tr>
         <th>Anos</th>
         <th id="Invest_col_head">Investimento</th>
