--- a/projeto final/valorfuturocomreforco.html
+++ b/projeto final/valorfuturocomreforco.html
@@ -93,7 +93,7 @@ p<head>
 <br>
 <div class="container" div="compound-interest ">
   
-  <table class="table table-striped table-bordered" id="myTable">
+  <table style="position: absolute; left: 50px;" class="table table-striped table-bordered w-auto" id="myTable">
     <tr>
         <th>Anos</th>
         <th id="Invest_col_head">Investimento</th>
