--- a/projeto final/valorfuturosemreforco.html
+++ b/projeto final/valorfuturosemreforco.html
@@ -78,7 +78,7 @@
   <br>
   <div class="container" div="compound-interest ">
 
-    <table class="table table-striped table-bordered" id="myTable">
+    <table style="position: absolute; left: 50px;" class="table table-striped table-bordered w-auto" id="myTable"></table>
       <tr>
           <th>Anos</th>
           <th id="Invest_col_head">Investimento</th>
