--- a/projeto final/valorfuturosemreforco.html
+++ b/projeto final/valorfuturosemreforco.html
@@ -2,6 +2,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <script src="codjava.js"></script>
+  <script src="chart.js"></script>
 </head>
 
 <div class="jumbotron">
@@ -78,7 +79,7 @@
   <br>
   <div class="container" div="compound-interest ">
 
-    <table style="position: absolute; left: 50px;" class="table table-striped table-bordered w-auto" id="myTable"></table>
+    <table style="position: absolute; left: 300px;" class="table table-striped table-bordered w-auto" id="myTable">
       <tr>
           <th>Anos</th>
           <th id="Invest_col_head">Investimento</th>
@@ -88,6 +89,13 @@
           <th id="vfinal_col_head">Valor final</th>
       </tr>
   </table>
+  <div style="position: absolute; right: 100px;  height:700px; width:750px" class="container">
+    <canvas id="myChart"></canvas>
+  </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="./chart.js"></script>
